--- a/www/webapp/templates/index.html
+++ b/www/webapp/templates/index.html
@@ -5,66 +5,28 @@
 {% endblock %}
 
 {% block body %}
-<section class="py-5 text-center container">
-    <div class="row py-lg-5">
-      <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">Flask with Bootstrap</h1>
-        <p class="lead text-body-secondary">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
-        <p>
-          <a href="#" class="btn btn-primary my-2">Main call to action</a>
-          <a href="#" class="btn btn-secondary my-2">Secondary action</a>
-        </p>
-      </div>
+<div>
+    <!-- TODO: Add a header image -->
+    <div class="mb-3 overflow-hidden" style="max-height: 870px; margin-top: -4rem">
+        <img src="/static/img/hero/hero-tango.jpg" class="w-100">
     </div>
-  </section>
-<div class="album py-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                    <img src="https://via.placeholder.com/300" alt="Placeholder image" width="100%" height="225">
-                    <div class="card-body">
-                        <p class="card-text">This is a placeholder card.</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                            </div>
-                            <small class="text-muted">9 mins</small>
-                        </div>
+    
+    <div>
+        <div class="flex justify-content-center">
+            <h1 class="text-center">Unlimited Access to over 500 Lessons</h1>
+            <p class="text-center">Learn to dance from the best instructors in the world</p>
+        </div>
+
+        <div class="mx-5 row">
+            {% for course in courses %}
+                <a class="col-3 mb-3" href="/course/{{course.get('id')}}">
+                    <div class="card rounded-4 shadow overflow-hidden">
+                        <img loading="auto" 
+                        src="https://kajabi-storefronts-production.kajabi-cdn.com/kajabi-storefronts-production/file-uploads/themes/2154219945/settings_images/f0cf18c-aaf7-fa10-cfb-be87e6d3881_14.jpg"
+                        >
                     </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                    <img src="https://via.placeholder.com/300" alt="Placeholder image" width="100%" height="225">
-                    <div class="card-body">
-                        <p class="card-text">This is a placeholder card.</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                            </div>
-                            <small class="text-muted">9 mins</small>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                    <img src="https://via.placeholder.com/300" alt="Placeholder image" width="100%" height="225">
-                    <div class="card-body">
-                        <p class="card-text">This is a placeholder card.</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                            </div>
-                            <small class="text-muted">9 mins</small>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                </a>
+            {% endfor %}
         </div>
     </div>
 </div>
