--- a/www/webapp/templates/layout/components/navbar.html
+++ b/www/webapp/templates/layout/components/navbar.html
@@ -1,50 +1,50 @@
 {% macro navbar(translations) %}
-<div class="mx-5">
-    <nav class="navbar navbar-expand-lg navbar-light justify-content-between">
-        <div>
-            <a class="navbar-brand" href="/">TipsyTakedown</a>
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-        </div>
-
-        <div class="" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li>
-                    <a class="btn btn-primary mx-2" id="sign-up" href="/auth/login?pricetable=true">{{ translations['navbar']['sign_up']}}</a>
-                </li>
-                <li>
-                    {% if session['lang'] == 'en' %}
-                        <a href="/change_language/es">Español</a>
-                    {% else %}
-                        <a href="/change_language/en">English</a>
-                    {% endif %}
-                </li>
-                <li class="nav-item dropdown d-none" id="sign-out">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
-                            class="bi bi-person-circle" viewBox="0 0 16 16">
-                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
-                            <path fill-rule="evenodd"
-                                d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
-                        </svg>
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">{{ translations['navbar']['profile'] }}</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li>
-                            <a id="btn-signout" class="dropdown-item">{{ translations['navbar']['sign_out'] }}</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </nav>
+<div class="m-0">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark" aria-label="Tipsy Takedown navbar">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">TipsyTakedown</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="btn btn-primary mx-2 nav-link" id="sign-up" href="/auth/login?pricetable=true">{{ translations['navbar']['sign_up']}}</a>
+            </li>
+            <li class="nav-item">
+                <a class="mx-2 nav-link" href="/checkout">{{ translations['navbar']['checkout']}}</a>
+            </li>
+            <li class="nav-item">
+                {% if session['lang'] == 'en' %}
+                    <a class="nav-link" href="/change_language/es">Español</a>
+                {% else %}
+                    <a class="nav-link" href="/change_language/en">English</a>
+                {% endif %}
+            </li>
+            <li class="nav-item dropdown d-none" id="sign-out">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                        class="bi bi-person-circle" viewBox="0 0 16 16">
+                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
+                        <path fill-rule="evenodd"
+                            d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
+                    </svg>
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#">{{ translations['navbar']['profile'] }}</a></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li>
+                        <a id="btn-signout" class="dropdown-item">{{ translations['navbar']['sign_out'] }}</a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 </div>
 <script src="/static/js/components/navbar.js"></script>
 {%- endmacro %}
