--- a/www/webapp/templates/admin/course/components/createLesson/createLesson.html
+++ b/www/webapp/templates/admin/course/components/createLesson/createLesson.html
@@ -101,8 +101,8 @@
 
         return materialTr;
     }
-
-    const course = "{{ course }}" !== "None" ? `{{ course | tojson if course else '{}' }}` : null;
+    
+    const course = "{{ course }}" !== "" ? `{{ course | tojson if course else '{}' }}` : null;
 
     new LessonTable(
         "{{step_number}}", newLessonTemplate, newMaterialTemplate,
