feat: select lesson

--- a/www/webapp/templates/admin/course/components/createLesson/components/SelectLessonModal.html
+++ b/www/webapp/templates/admin/course/components/createLesson/components/SelectLessonModal.html
@@ -25,5 +25,7 @@
     const lessonSelector = new QuerySelector(
         getLessonList, "{{modal_id}}"
     );
+
+    globalThis.lessonSelector = lessonSelector;
 </script>
 {% endmacro %}
