--- a/www/webapp/templates/components/priceTable/priceTable.html
+++ b/www/webapp/templates/components/priceTable/priceTable.html
@@ -1,8 +1,8 @@
 {% macro priceTable(subscription_types, is_redirect_price_table) %}
 <main class="mx-auto my-3 d-flex justify-content-center">
-  <div class="row row-cols-1 row-cols-md-1 row-cols-lg-2 mb-3 text-center">
+  <div class="row row-cols-1 row-cols-md-1 row-cols-lg-2 mb-3 text-center mx-1">
     {% for subscription_type in subscription_types %}
-    <div class="col">
+    <div class="col flex-fill">
       <div class="card mb-4 rounded-3 shadow-sm flex-fill">
         <div class="align-content-centered">
           <div class="card-header mb-2">
